[package]
name = "ezlatexdoc"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
license = "LPPL-1.3c"
edition = "2018"
description = "A modern and friendly alternative to docstrip for LaTeX package documentation."
repository = "https://github.com/9999years/ezlatexdoc"
keywords = ["TeX", "LaTeX", "documentation"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
clap = "2.33.0"
nom = "5.0.1"
regex = "1.3.1"
unindent = "0.1.5"
itertools = "0.8.2"
toml = "0.5.5"
thiserror = "1.0.9"
structopt = "0.3.5"
serde_derive = "1.0.104"
serde = "1.0.104"

[dev-dependencies]
pretty_assertions = "0.6.1"
indoc = "0.3.4"

[lib]
name = "ezlatexdoc"
path = "src/lib.rs"

[[bin]]
name = "ezlatexdoc"
path = "src/main.rs"
